2005-06-02  graydon hoare  <graydon@pobox.com>

	* rcs_import.cc
	(cvs_key::is_synthetic_branch_founding_commit): New field.
	(cvs_key::operator==): Handle synthetic case specially.
	(cvs_key::operator<): Likewise.
	(push_branch): Likewise.	
	* tests/t_cvsimport_drepper.at: Converted bug testcase.
	* testsuite.at: Call it.

	* monotone.cc, commands.cc, options.hh 
	(OPT_NO_MERGES, OPT_DIFFS): New options.
	* app_state.cc (app_state::no_merges, app_state::diffs): Likewise.
	* commands.cc (log): Honor no_merges, diffs.
	* contrib/color_logs.{sh,conf}: Helpers for reviewing work in a
	nice colorized, easy-to-read fashion.
	* contrib/colorize: A colorization script found on the net.

	* HACKING, ROADMAP: Expand a bit.
	* commands.cc (changes_summary::print): Change macro to helper fn.
	* contrib/monotone.el (monotone-cmd): Handle nil exit code.

2005-06-01  Matt Johnston  <matt@ucc.asn.au>

	* tests/t_i18n_changelog.at: capitalise UTF-8 CHARSET to keep
	solaris happy.

2005-06-01  Timothy Brownawell  <tbrownaw@gmail.com>

	* netsync.cc (analyze_ancestry_graph): Try to fix segfault.
	Always accept tags.

2005-06-01  Timothy Brownawell  <tbrownaw@gmail.com>

	* netsync.cc (process_auth_cmd, analyze_ancestry_graph): Move
	write-permission checking to where it belongs, *after* we know
	exactly what we're checking permissions about. Drop things we
	don't want.

2005-06-01  Matt Johnston  <matt@ucc.asn.au>

	* tests/t_cvsimport_deleted_invar.at: don't use -C with tar
	* tests/t_i18n_file.at: capitalise CHARSET=UTF-8, seems more standard.
	* tests/t_merge_normalization_edge_case.at: use known-good output
	rather than using diff3 --merge

2005-05-31  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/t_epoch_server.at: fix typo
	* netsync.cc (session::process_auth_cmd): If no branches are allowed
	for writing, also check for write permissions to branch "" (needed
	for serving empty dbs). For sync, don't refuse connection if there